--- a/challenge3_float.html
+++ b/challenge3_float.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>challenge3_float</title>
     <style>
         img{
             width: 8%;
