--- a/challenge4_position.html
+++ b/challenge4_position.html
@@ -23,7 +23,8 @@
             padding: 150px;
             margin: 0%;
             text-align: center;
-            font-size: 400%;
+            font-size: 500%;
+            color: #0e0d0d;
         }
         div{
             padding: 20px;
