--- a/challenge4_position.html
+++ b/challenge4_position.html
@@ -9,7 +9,7 @@
             background-color: rgb(14, 14, 14);
             position: sticky;
             top: 0;
-            width: 99%;
+            width: calc( 100% - 20px);
             padding: 10px;
             font-size: 150%;
         }
